--- a/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-gpu.dtsi
@@ -69,6 +69,8 @@
 		/* <HZ/12> */
 		qcom,idle-timeout = <58>;
 
+		qcom,no-nap;
+
 		qcom,highest-bank-bit = <14>;
 
 		qcom,min-access-length = <32>;
